[tool.poetry]
name = "jam-tayang-pro-bot"
version = "1.0.0"
description = "Professional Telegram Bot for Social Media Services"
author = "Kantong Aplikasi 2025"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "20.7"
aiohttp = "3.9.1"
sqlalchemy = "2.0.23"
aiosqlite = "0.19.0"
requests = "2.31.0"
python-dotenv = "1.0.0"
psutil = "5.9.6"
flask = "2.3.3"
fake-useragent = "1.4.0"
beautifulsoup4 = "4.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
